--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "tonwa-uq",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "uq client",
     "private": false,
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
-        "/dist"
+        "/dist",
+        "/tonwa-uq"
     ],
     "repository": {
         "type": "git",
