--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tonwa-uq",
-    "version": "0.1.4",
+    "version": "0.1.5",
     "description": "uq client",
     "private": false,
     "main": "dist/index.js",
@@ -22,14 +22,7 @@
     "dependencies": {
         "@types/node": "^8.10.62",
         "@types/node-fetch": "^2.1.2",
-        "@types/react": "^18.0.5",
-        "@types/react-dom": "^18.0.1",
-        "bootstrap": "^5.0.2",
-        "font-awesome": "^4.7.0",
         "jwt-decode": "^3.1.2",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "typescript": "^4.0.0",
-        "valtio": "^1.5.2"
+        "typescript": "^4.0.0"
     }
 }
